<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ten_percent">10%</string>
    <string name="fifteen_percent">15%</string>
    <string name="twenty_percent">20%</string>
    <string name="hint_enter_tip">Enter tip amount</string>
    <string name="tip_amount_empty">"Tip is: "</string>
    <string name="invalid_tip_amount">The bill amount is invalid. Please make sure the bill is at least greather than 0</string>

</resources>
